--- a/style.css
+++ b/style.css
@@ -1,57 +1,46 @@
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.top_div{
-    margin-top: 200px;
+body {
+    margin-top: 0px;
+    text-align: center;
+    color: white;
+    font-family: 'Happy Monkey', cursive;
+    background: #a2d2ff;
+    text-shadow: 0px 0px 1px black;
     
 }
-.img_goo{
-    display: block;
+.imgdiv{
+    
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
+  
+    border-color: #EFB0C9;
 }
-
-.inputbox{
-    margin-top: 20px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 400px;
-    height: 40px;
-    padding-left: 10px;
-    font-weight: bold;
-    border-radius: 25px;
-}
-
-.btn{
-    
-    margin-top: 25px;
-  margin-left: 10px;
-  margin-right: 10px;
-    border: 1px solid black;
-    border-radius: 4px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
-    font-size: 16px;
-    font-weight: lighter;
-}
-
-.btn-wrapper{
-    margin-top: 10px;
-    
-   display: flex;
-    justify-content: center;
-
-}
-.japflg{
-    display: block;
-    background-color: rgb(158, 2, 2);
+#imgid{
     height: 150px;
     width: 150px;
-    margin: 50px auto 0px auto;
     border-radius: 100px;
+    border: 5px solid;
+    border-color: #EFB0C9;
+  
+}
+
+#b-age{
+    border-radius: 3px;
+    margin: 8px 4px 8px 4px;
+    padding: 5px 10px;
+    background-color: #EFB0C9;
+}
+
+
+#b-date{
+    border-radius: 3px;
+    margin: 8px 4px 8px 4px;
+    padding: 5px 10px;
+    background-color: #EFB0C9;
+}
+
+#header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
